enhance: `delegatedadministration`: update with test
