# delegatedadministration/model_fetch_delegates_list_response.go
@@ -13,6 +13,8 @@ package delegatedadministration
 
 import (
 	"encoding/json"
+	"bytes"
+	"fmt"
 )
 
 // checks if the FetchDelegatesListResponse type satisfies the MappedNullable interface at compile time
@@ -20,19 +22,24 @@ var _ MappedNullable = &FetchDelegatesListResponse{}
 
 // FetchDelegatesListResponse struct for FetchDelegatesListResponse
 type FetchDelegatesListResponse struct {
-	DelegateList []Delegate `json:"delegateList,omitempty"`
-	Msg *string `json:"msg,omitempty"`
-	ErrorCode *string `json:"errorCode,omitempty"`
+	DelegateList []Delegate `json:"delegateList"`
+	Msg string `json:"msg"`
+	ErrorCode string `json:"errorCode"`
 	TotalCount *string `json:"totalCount,omitempty"`
 	DelegateCount *int32 `json:"delegateCount,omitempty"`
 }
+
+type _FetchDelegatesListResponse FetchDelegatesListResponse
 
 // NewFetchDelegatesListResponse instantiates a new FetchDelegatesListResponse object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewFetchDelegatesListResponse() *FetchDelegatesListResponse {
+func NewFetchDelegatesListResponse(delegateList []Delegate, msg string, errorCode string) *FetchDelegatesListResponse {
 	this := FetchDelegatesListResponse{}
+	this.DelegateList = delegateList
+	this.Msg = msg
+	this.ErrorCode = errorCode
 	return &this
 }
 
@@ -44,100 +51,76 @@ func NewFetchDelegatesListResponseWithDefaults() *FetchDelegatesListResponse {
 	return &this
 }
 
-// GetDelegateList returns the DelegateList field value if set, zero value otherwise.
+// GetDelegateList returns the DelegateList field value
 func (o *FetchDelegatesListResponse) GetDelegateList() []Delegate {
-	if o == nil || IsNil(o.DelegateList) {
+	if o == nil {
 		var ret []Delegate
 		return ret
 	}
+
 	return o.DelegateList
 }
 
-// GetDelegateListOk returns a tuple with the DelegateList field value if set, nil otherwise
+// GetDelegateListOk returns a tuple with the DelegateList field value
 // and a boolean to check if the value has been set.
 func (o *FetchDelegatesListResponse) GetDelegateListOk() ([]Delegate, bool) {
-	if o == nil || IsNil(o.DelegateList) {
+	if o == nil {
 		return nil, false
 	}
 	return o.DelegateList, true
 }
 
-// HasDelegateList returns a boolean if a field has been set.
-func (o *FetchDelegatesListResponse) HasDelegateList() bool {
-	if o != nil && !IsNil(o.DelegateList) {
-		return true
-	}
-
-	return false
-}
-
-// SetDelegateList gets a reference to the given []Delegate and assigns it to the DelegateList field.
+// SetDelegateList sets field value
 func (o *FetchDelegatesListResponse) SetDelegateList(v []Delegate) {
 	o.DelegateList = v
 }
 
-// GetMsg returns the Msg field value if set, zero value otherwise.
+// GetMsg returns the Msg field value
 func (o *FetchDelegatesListResponse) GetMsg() string {
-	if o == nil || IsNil(o.Msg) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.Msg
+
+	return o.Msg
 }
 
-// GetMsgOk returns a tuple with the Msg field value if set, nil otherwise
+// GetMsgOk returns a tuple with the Msg field value
 // and a boolean to check if the value has been set.
 func (o *FetchDelegatesListResponse) GetMsgOk() (*string, bool) {
-	if o == nil || IsNil(o.Msg) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Msg, true
+	return &o.Msg, true
 }
 
-// HasMsg returns a boolean if a field has been set.
-func (o *FetchDelegatesListResponse) HasMsg() bool {
-	if o != nil && !IsNil(o.Msg) {
-		return true
-	}
-
-	return false
-}
-
-// SetMsg gets a reference to the given string and assigns it to the Msg field.
+// SetMsg sets field value
 func (o *FetchDelegatesListResponse) SetMsg(v string) {
-	o.Msg = &v
+	o.Msg = v
 }
 
-// GetErrorCode returns the ErrorCode field value if set, zero value otherwise.
+// GetErrorCode returns the ErrorCode field value
 func (o *FetchDelegatesListResponse) GetErrorCode() string {
-	if o == nil || IsNil(o.ErrorCode) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.ErrorCode
+
+	return o.ErrorCode
 }
 
-// GetErrorCodeOk returns a tuple with the ErrorCode field value if set, nil otherwise
+// GetErrorCodeOk returns a tuple with the ErrorCode field value
 // and a boolean to check if the value has been set.
 func (o *FetchDelegatesListResponse) GetErrorCodeOk() (*string, bool) {
-	if o == nil || IsNil(o.ErrorCode) {
+	if o == nil {
 		return nil, false
 	}
-	return o.ErrorCode, true
+	return &o.ErrorCode, true
 }
 
-// HasErrorCode returns a boolean if a field has been set.
-func (o *FetchDelegatesListResponse) HasErrorCode() bool {
-	if o != nil && !IsNil(o.ErrorCode) {
-		return true
-	}
-
-	return false
-}
-
-// SetErrorCode gets a reference to the given string and assigns it to the ErrorCode field.
+// SetErrorCode sets field value
 func (o *FetchDelegatesListResponse) SetErrorCode(v string) {
-	o.ErrorCode = &v
+	o.ErrorCode = v
 }
 
 // GetTotalCount returns the TotalCount field value if set, zero value otherwise.
@@ -214,15 +197,9 @@ func (o FetchDelegatesListResponse) MarshalJSON() ([]byte, error) {
 
 func (o FetchDelegatesListResponse) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.DelegateList) {
-		toSerialize["delegateList"] = o.DelegateList
-	}
-	if !IsNil(o.Msg) {
-		toSerialize["msg"] = o.Msg
-	}
-	if !IsNil(o.ErrorCode) {
-		toSerialize["errorCode"] = o.ErrorCode
-	}
+	toSerialize["delegateList"] = o.DelegateList
+	toSerialize["msg"] = o.Msg
+	toSerialize["errorCode"] = o.ErrorCode
 	if !IsNil(o.TotalCount) {
 		toSerialize["totalCount"] = o.TotalCount
 	}
@@ -230,6 +207,45 @@ func (o FetchDelegatesListResponse) ToMap() (map[string]interface{}, error) {
 		toSerialize["delegateCount"] = o.DelegateCount
 	}
 	return toSerialize, nil
+}
+
+func (o *FetchDelegatesListResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"delegateList",
+		"msg",
+		"errorCode",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varFetchDelegatesListResponse := _FetchDelegatesListResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varFetchDelegatesListResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = FetchDelegatesListResponse(varFetchDelegatesListResponse)
+
+	return err
 }
 
 type NullableFetchDelegatesListResponse struct {
